--- a/Analysis_of_IMDB_data_set.ipynb
+++ b/Analysis_of_IMDB_data_set.ipynb
@@ -20,7 +20,7 @@
         "Des7k4rsfND7",
         "FrcTgiCkgM1p"
       ],
-      "authorship_tag": "ABX9TyMaAmsV+5xVCvV+H1xMPwlC",
+      "authorship_tag": "ABX9TyN/gKA9rApcWuOskIzRhCDt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,26 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/GauravRana24/Python_Projects/blob/main/Analysis_of_IMDB_data_set.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**# Finding from IMDB dataset which contain two files: movies and director **\n",
+        "\n",
+        "1.   Identified **Steven Spielberg** as the most productive and profitable director, with 26 films generating over **$7,016 million** in profit.\n",
+        "\n",
+        "2.   Determined **\"Avatar,\"** directed by **James Cameron**, as the highest profit-making movie, accruing over **$2,550 million** in profit.\n",
+        "\n",
+        "3.  Found that approximately **97% of directors** in the dataset were  **male** , spanning from 1976 to 2106.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SrXUIliO3_YU"
+      }
     },
     {
       "cell_type": "code",
@@ -3749,6 +3769,58 @@
     {
       "cell_type": "code",
       "source": [
+        "movies_data[\"year\"].max()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wtbnfVjm26ao",
+        "outputId": "8c979f8b-5244-49c0-ff0a-3c8385379b55"
+      },
+      "execution_count": 248,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2016"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 248
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movies_data[\"year\"].min()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1yyOgaP6aU7A",
+        "outputId": "a6851e0e-488c-47a3-ef26-a7161f8ff793"
+      },
+      "execution_count": 249,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1976"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 249
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "total_years= movies_data[\"year\"].max() - movies_data[\"year\"].min()\n",
         "total_years"
       ],
@@ -3756,10 +3828,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "1yyOgaP6aU7A",
-        "outputId": "fdb34a96-f4eb-4ee8-d81b-5c8f652b9c9d"
+        "id": "mFwwtKEL3CHs",
+        "outputId": "07e5f9c0-9d79-41a5-dafb-bb8c8738a000"
       },
-      "execution_count": 112,
+      "execution_count": 250,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3769,7 +3841,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 112
+          "execution_count": 250
         }
       ]
     },
@@ -5013,7 +5085,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 486
         },
         "id": "0gqw9YNSWrlk",
         "outputId": "51589eec-db9a-4a44-fcf9-1c3acd6a4832"
@@ -5478,7 +5550,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 237
         },
         "id": "Ln20CYYRW_6i",
         "outputId": "b8e41c84-081e-4fbb-a096-3338469abc0b"
@@ -5792,7 +5864,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 206
         },
         "id": "Cf5TKmjWXEHr",
         "outputId": "be558bb0-bebf-45ff-f5e8-9b812fc8d7fa"
@@ -6106,7 +6178,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 237
         },
         "id": "Td8awZOAXJO1",
         "outputId": "8fc84d33-379e-4174-f5ba-c41800d828d2"
@@ -6429,7 +6501,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 237
         },
         "id": "k_DILXn-XPiW",
         "outputId": "267cb845-743c-45b7-e98f-cbd3b4290703"
@@ -6766,7 +6838,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 237
         },
         "id": "a360I9dDXVTn",
         "outputId": "c7a7f87c-ed63-4958-e736-4bfa811a9d78"
