--- a/Analysis_of_IMDB_data_set.ipynb
+++ b/Analysis_of_IMDB_data_set.ipynb
@@ -20,7 +20,7 @@
         "Des7k4rsfND7",
         "FrcTgiCkgM1p"
       ],
-      "authorship_tag": "ABX9TyN/gKA9rApcWuOskIzRhCDt",
+      "authorship_tag": "ABX9TyNEirAMxO+zCusZTFX1xlJq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,9 +49,9 @@
         "\n",
         "1.   Identified **Steven Spielberg** as the most productive and profitable director, with 26 films generating over **$7,016 million** in profit.\n",
         "\n",
-        "2.   Determined **\"Avatar,\"** directed by **James Cameron**, as the highest profit-making movie, accruing over **$2,550 million** in profit.\n",
+        "2.   **\"Avatar,\"** directed by **James Cameron**, as the highest profit-making movie, accruing over **$2,550 million** in profit.\n",
         "\n",
-        "3.  Found that approximately **97% of directors** in the dataset were  **male** , spanning from 1976 to 2106.\n",
+        "3.  Found that approximately **97% of directors** in the dataset were  **male** , spanning from 1976 to 2016 (40 years).\n",
         "\n",
         "\n",
         "\n",
